member remove from group icon changed

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -454,7 +454,7 @@
                      class="btn btn-mini"><i class="icon-edit"></i></a>&nbsp;
                   <button type="submit" 
                           ng-click="removeMember(member.uuid, group.uuid)" 
-                          class="btn btn-danger btn-mini"><i class="icon-trash icon-white"></i></button>
+                          class="btn btn-danger btn-mini"><i class="icon-remove-sign icon-white"></i></button>
                 </div>
               </td>
             </tr>
