improved email validation

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -178,7 +178,7 @@
         </div>
         <hr>
         <!-- member form -->
-        <form>
+        <form name="registerUserForm">
           <fieldset>
 
             <div class="control-group">
@@ -206,6 +206,7 @@
               </div>
             </div>
             <hr>
+
             <div class="control-group">
               <label class="control-label">{{ui.groups.firstName}}</label>
               <div class="controls">
@@ -214,6 +215,7 @@
                         ng-model="memberForm.firstName">
               </div>
             </div>
+
             <div class="control-group">
               <label class="control-label">{{ui.groups.lastName}}</label>
               <div class="controls">
@@ -222,15 +224,39 @@
                         ng-model="memberForm.lastName">
               </div>
             </div>
+
             <div class="control-group">
               <label class="control-label">{{ui.groups.email}}</label>
               <div class="controls">
-                <input  type="text" 
+                <input  type="email"
+                        name="email"
                         class="span4" 
-                        ng-model="memberForm.EmailAddress">
+                        ng-model="memberForm.EmailAddress"
+                        ng-minlength=3
+                        ng-maxlength=50 />
+                <div class="error-container"
+                     ng-show="registerUserForm.email.$dirty && registerUserForm.email.$invalid">
+                  <p class="text-error"
+                     ng-show="registerUserForm.email.$error.minlength">
+                    <small>
+                      <i>{{ui.errors.email.min}}</i>
+                    </small>
+                  </p>
+                  <p class="text-error"
+                     ng-show="registerUserForm.email.$error.email">
+                    <small>
+                      <i>{{ui.errors.email.notValid}}</i>
+                    </small>
+                  </p>
+                  <p class="text-error"
+                     ng-show="registerUserForm.email.$error.maxlength">
+                    <small>
+                      <i>{{ui.errors.email.max}}</i>
+                    </small>
+                  </p>
+                </div>
               </div>
             </div>
-
 
             <div class="control-group">
               <label class="control-label">{{ui.groups.phone}}</label>
@@ -254,7 +280,6 @@
               </div>
             </div>
 
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.address}}</label>
               <div class="controls">
@@ -263,6 +288,7 @@
                         ng-model="memberForm.PostAddress">
               </div>
             </div>
+
             <div class="control-group">
               <label class="control-label">{{ui.groups.postCode}}</label>
               <div class="controls">
@@ -271,6 +297,7 @@
                         ng-model="memberForm.PostZip">
               </div>
             </div>
+
             <div class="control-group">
               <label class="control-label">{{ui.groups.city}}</label>
               <div class="controls">
@@ -280,6 +307,7 @@
               </div>
             </div>
             <hr>
+
             <div class="control-group">
               <label class="control-label">{{ui.groups.userName}}</label>
               <div class="controls">
@@ -288,6 +316,7 @@
                         ng-model="memberForm.username">
               </div>
             </div>
+
             <div class="control-group">
               <label class="control-label">{{ui.groups.password}}</label>
               <div class="controls">
@@ -296,6 +325,7 @@
                         ng-model="memberForm.password">
               </div>
             </div>
+
             <div class="form-actions">
               <button type="submit" 
                   ng-click="memberSubmit(memberForm)" 
