--- a/war/js/views/profile.html
+++ b/war/js/views/profile.html
@@ -122,7 +122,8 @@
         <hr>
 
         <!-- edit profile form -->
-        <form class="form-vertical">
+        <form class="form-vertical"
+              name="profileForm">
 
           <div class="control-group"
                ng-hide="app.resources.role > 2">
@@ -155,13 +156,40 @@
                       value="{{data.resources.lastName}}">
             </div>
           </div>
+
+
+
           <div class="control-group">
             <label class="control-label">{{ui.profile.email}}</label>
             <div class="controls">
-              <input  type="text" 
-                      class="span4" 
+              <input  type="email"
+                      name="email"
+                      class="span4"
                       ng-model="profilemeta.EmailAddress"
-                      value="{{data.resources.EmailAddress}}">
+                      ng-minlength=3
+                      ng-maxlength=50
+                      value="{{data.resources.EmailAddress}}" />
+              <div class="error-container"
+                   ng-show="profileForm.email.$dirty && profileForm.email.$invalid">
+                <p class="text-error"
+                   ng-show="profileForm.email.$error.minlength">
+                  <small>
+                    <i>{{ui.errors.email.min}}</i>
+                  </small>
+                </p>
+                <p class="text-error"
+                   ng-show="profileForm.email.$error.email">
+                  <small>
+                    <i>{{ui.errors.email.notValid}}</i>
+                  </small>
+                </p>
+                <p class="text-error"
+                   ng-show="profileForm.email.$error.maxlength">
+                  <small>
+                    <i>{{ui.errors.email.max}}</i>
+                  </small>
+                </p>
+              </div>
             </div>
           </div>
 
