--- a/war/js/views/help.html
+++ b/war/js/views/help.html
@@ -16,6 +16,12 @@
     <!-- tabs -->
     <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0px;">
 
+      <li class="{{(views.faq==true) && 'active'}}">
+        <a  href="help#faqTab"
+            data-toggle="tab"
+            ng-click="setViewTo('faq')"><span class="entypo">&#10067;</span> FAQ</a>
+      </li>
+
       <li class="{{(views.dashboard==true) && 'active'}}">
         <a  href="help#dashboardTab"
             data-toggle="tab"
@@ -74,7 +80,169 @@
 
 
       <!-- dashboardTab -->
-      <div class="tab-pane {{(views.dashboard == true == true) && 'active'}}" id="dashboardTab">
+      <div class="tab-pane {{(views.faq == true) && 'active'}}" id="faqTab">
+
+        <div class="tab-header">
+          <h3 class="pull-left">FAQ</h3>
+        </div>
+        <hr>
+
+        <h4>How to see everybody’s availability?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to change someone else's availability?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to create a new user?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to add someone to a group?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to remove someone from a group (e.g., Schippers)?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to remove someone from the system?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to set myself quickly unavailable for the next 24 hours?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <hr/>
+
+        <br/>
+
+        <h4>How to set myself available for every weekend?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How see the availability for the coming weekend?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to reset the password if you forget?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to check the upcoming shortages of your group(s)?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to change my personal information (e.g., mobile number, or password)?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to send a message (SMS & Email) to team members or groups?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to change language of Standby Web interface?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <br/>
+
+        <h4>How to set your “default” group for Agenda tab?</h4>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
+          nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
+          luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
+          quis condimentum est lectus et diam. In hac habitasse platea dictumst.</p>
+
+        <h4></h4>
+
+        <h4></h4>
+
+        <h4></h4>
+
+        <h4></h4>
+
+        <h4></h4>
+
+        <h4></h4>
+
+        <h4></h4>
+
+        <h4></h4>
+
+        <h4></h4>
+
+        <h4></h4>
+
+        <h4></h4>
+
+        <h4></h4>
+
+
+      </div>
+      <!-- end dashboardTab -->
+
+
+
+
+
+      <!-- dashboardTab -->
+      <div class="tab-pane {{(views.dashboard == true) && 'active'}}" id="dashboardTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.dashboard.dashboard}}</h3>
         </div>
@@ -104,7 +272,7 @@
 
 
       <!-- planboardTab -->
-      <div class="tab-pane {{(views.planboard == true == true) && 'active'}}" id="planboardTab">
+      <div class="tab-pane {{(views.planboard == true) && 'active'}}" id="planboardTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.planboard.planboard}}</h3>
         </div>
@@ -163,7 +331,7 @@
 
 
       <!-- messagesTab -->
-      <div class="tab-pane {{(views.messages == true == true) && 'active'}}" id="messagesTab">
+      <div class="tab-pane {{(views.messages == true) && 'active'}}" id="messagesTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.message.messages}}</h3>
         </div>
@@ -225,7 +393,7 @@
 
 
       <!-- groupsTab -->
-      <div class="tab-pane {{(views.groups == true == true) && 'active'}}" id="groupsTab">
+      <div class="tab-pane {{(views.groups == true) && 'active'}}" id="groupsTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.groups.groups}}</h3>
         </div>
@@ -272,7 +440,7 @@
 
 
       <!-- profileTab -->
-      <div class="tab-pane {{(views.profile == true == true) && 'active'}}" id="profileTab">
+      <div class="tab-pane {{(views.profile == true) && 'active'}}" id="profileTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.profile.profile}}</h3>
         </div>
@@ -288,7 +456,7 @@
 
 
       <!-- settingsTab -->
-      <div class="tab-pane {{(views.settings == true == true) && 'active'}}" id="settingsTab">
+      <div class="tab-pane {{(views.settings == true) && 'active'}}" id="settingsTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.settings.settings}}</h3>
         </div>
@@ -307,7 +475,7 @@
 
 
       <!-- supportTab -->
-      <div class="tab-pane {{(views.support == true == true) && 'active'}}" id="supportTab">
+      <div class="tab-pane {{(views.support == true) && 'active'}}" id="supportTab">
         <div class="tab-header">
           <h3 class="pull-left">{{ui.help.support}}</h3>
         </div>
