first version of video embedding

--- a/war/js/views/help.html
+++ b/war/js/views/help.html
@@ -88,6 +88,8 @@
         <hr>
 
         <h4>How to see everybody’s availability?</h4>
+
+        <iframe width="560" height="315" src="//www.youtube.com/embed/fepUaXchGAc" frameborder="0" allowfullscreen></iframe>
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis. Nam feugiat tellus orci,
           nec tempor orci mattis quis. Aliquam erat volutpat. Pellentesque lobortis nisl vel erat
           luctus rhoncus. Sed tristique, odio at euismod condimentum, tortor tortor lacinia neque,
