translations for faq questions

--- a/war/js/views/faq.html
+++ b/war/js/views/faq.html
@@ -47,7 +47,7 @@
         </div>
         <hr>
 
-        <h4>How to see everybody’s availability?</h4>
+        <h4>Hoe zet ik mezelf snel op niet beschikbaar voor de komende 24 uur?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -56,7 +56,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to change someone else's availability?</h4>
+        <h4>Hoe zet ik mezelf voor alle weekenden op beschikbaar?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -65,7 +65,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to create a new user?</h4>
+        <h4>Hoe zie ik de beschikbaarheid voor de komende week?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -74,7 +74,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to add someone to a group?</h4>
+        <h4>Hoe krijg ik een nieuwe wachtwoord als ik het ben vergeten?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -83,7 +83,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to remove someone from a group (e.g., Schippers)?</h4>
+        <h4>Hoe controleer ik of er een tekort dreigt in mijn groep(en)?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -92,7 +92,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to remove someone from the system?</h4>
+        <h4>Hoe verander ik mijn persoonlijke informatie (bijv. telefoonnummer of wachtwoord)?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -101,7 +101,25 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to set myself quickly unavailable for the next 24 hours?</h4>
+        <h4>Hoe stuur ik een bericht (SMS & email) naar andere collega's of groepen?</h4>
+        <iframe width="560"
+                height="315"
+                src="//www.youtube.com/embed/fepUaXchGAc"
+                frameborder="0"
+                allowfullscreen></iframe>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <br/>
+
+        <h4>Hoe stel ik de taal in van de StandBy Web app?</h4>
+        <iframe width="560"
+                height="315"
+                src="//www.youtube.com/embed/fepUaXchGAc"
+                frameborder="0"
+                allowfullscreen></iframe>
+        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <br/>
+
+        <h4>Hoe stel ik een standaard groep in voor de Agenda Tab?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -114,7 +132,7 @@
 
         <br/>
 
-        <h4>How to set myself available for every weekend?</h4>
+        <h4>Hoe kan ik de beschikbaarheid van een collega inzien?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -123,7 +141,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How see the availability for the coming weekend?</h4>
+        <h4>Hoe kan ik de beschikbaarheid van een collega wijzigen?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -132,7 +150,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to reset the password if you forget?</h4>
+        <h4>Hoe maak ik een nieuwe gebruiker aan?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -141,7 +159,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to check the upcoming shortages of your group(s)?</h4>
+        <h4>Hoe voeg ik iemand toe aan een groep?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -150,7 +168,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to change my personal information (e.g., mobile number, or password)?</h4>
+        <h4>Hoe verwijder ik iemand uit een groep?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -159,7 +177,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to send a message (SMS & Email) to team members or groups?</h4>
+        <h4>Hoe verwijders ik iemand uit het systeem?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -167,25 +185,6 @@
                 allowfullscreen></iframe>
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
-
-        <h4>How to change language of Standby Web interface?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
-        <br/>
-
-        <h4>How to set your “default” group for Agenda tab?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
-        <br/>
-
 
       </div>
       <!-- end webTab -->
@@ -201,7 +200,7 @@
         </div>
         <hr>
 
-        <h4>How to download the App?</h4>
+        <h4>Hoe download ik de app?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -210,7 +209,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How do I know which version of the App i am using?</h4>
+        <h4>Hoe weet ik welke versie van de app ik gebruik?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -219,7 +218,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to set myself not available for the coming 6 hours?</h4>
+        <h4>Hoe zet ik mezelf voor de komende 6 uur op niet beschikbaar?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -228,13 +227,13 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to set myself available for every Tuesday from 17:00-23:00?</h4>
+        <h4>Hoe zet ik mezelf beschikbaar voor iedere dinsdagavond van 17:00-2300?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
                 frameborder="0"
                 allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Hoe stuur ik een bericht naar alle collega's in een groep (bijv. alle opstappers)?</p>
         <br/>
 
         <h4>How to send a message to all Opstappers?</h4>
@@ -246,7 +245,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to get the current personal and group status?</h4>
+        <h4>Hoe zie ik mijn huidige status en die van de groep(en)?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
@@ -255,7 +254,7 @@
         <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>How to set on/off geo-fencing?</h4>
+        <h4>Hoe zet ik de geo-fencing optie aan of uit?</h4>
         <iframe width="560"
                 height="315"
                 src="//www.youtube.com/embed/fepUaXchGAc"
