--- a/war/js/views/help.html
+++ b/war/js/views/help.html
@@ -1,10 +1,13 @@
 <div class="page-header">
   <h2>{{ui.help.header}}</h2>
-  <!-- <div class="btn-group pull-right">
-    <button type="submit" 
-            ng-click="downloadManual()" 
-            class="btn btn-success">{{ui.downloads.manual}}</button>
-  </div> -->
+  <div class="btn-group pull-right">
+    <a href="../docs/manual.pdf"
+       target="_blank"
+       class="btn btn-success">
+      <i class="icon-book icon-white"></i>
+      {{ui.downloads.manual}}
+    </a>
+  </div>
 </div>
 
 
