faq changed a bit

--- a/war/js/views/faq.html
+++ b/war/js/views/faq.html
@@ -54,143 +54,71 @@
         <hr>
 
         <h4>Hoe zet ik mezelf snel op niet beschikbaar voor de komende 24 uur?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>Hoe zet ik mezelf voor alle weekenden op beschikbaar?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>Hoe zie ik de beschikbaarheid voor de komende week?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>Hoe krijg ik een nieuwe wachtwoord als ik het ben vergeten?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>Hoe controleer ik of er een tekort dreigt in mijn groep(en)?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>Hoe verander ik mijn persoonlijke informatie (bijv. telefoonnummer of wachtwoord)?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>Hoe stuur ik een bericht (SMS & email) naar andere collega's of groepen?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>Hoe stel ik de taal in van de StandBy Web app?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>Hoe stel ik een standaard groep in voor de Agenda Tab?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
-        <hr/>
+        <section ng-show="app.resources.role == 1">
+          <div class="tab-header">
+            <h3 class="pull-left">Voor planners</h3>
+          </div>
+          <hr>
 
-        <br/>
+          <h4>Hoe kan ik de beschikbaarheid van een collega inzien?</h4>
+          <p>Video wordt binnenkort gepubliceerd.</p>
+          <br/>
 
-        <h4>Hoe kan ik de beschikbaarheid van een collega inzien?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
-        <br/>
+          <h4>Hoe kan ik de beschikbaarheid van een collega wijzigen?</h4>
+          <p>Video wordt binnenkort gepubliceerd.</p>
+          <br/>
 
-        <h4>Hoe kan ik de beschikbaarheid van een collega wijzigen?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
-        <br/>
+          <h4>Hoe maak ik een nieuwe gebruiker aan?</h4>
+          <p>Video wordt binnenkort gepubliceerd.</p>
+          <br/>
 
-        <h4>Hoe maak ik een nieuwe gebruiker aan?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
-        <br/>
+          <h4>Hoe voeg ik iemand toe aan een groep?</h4>
+          <p>Video wordt binnenkort gepubliceerd.</p>
+          <br/>
 
-        <h4>Hoe voeg ik iemand toe aan een groep?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
-        <br/>
+          <h4>Hoe verwijder ik iemand uit een groep?</h4>
+          <p>Video wordt binnenkort gepubliceerd.</p>
+          <br/>
 
-        <h4>Hoe verwijder ik iemand uit een groep?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
-        <br/>
-
-        <h4>Hoe verwijders ik iemand uit het systeem?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
-        <br/>
+          <h4>Hoe verwijders ik iemand uit het systeem?</h4>
+          <p>Video wordt binnenkort gepubliceerd.</p>
+          <br/>
+        </section>
 
       </div>
       <!-- end webTab -->
@@ -212,61 +140,35 @@
                 src="//www.youtube.com/embed/fepUaXchGAc"
                 frameborder="0"
                 allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>Hoe weet ik welke versie van de app ik gebruik?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
-        <br/>
+        <!--<h4>Hoe weet ik welke versie van de app ik gebruik?</h4>-->
+        <!--<iframe width="560"-->
+                <!--height="315"-->
+                <!--src="//www.youtube.com/embed/fepUaXchGAc"-->
+                <!--frameborder="0"-->
+                <!--allowfullscreen></iframe>-->
+        <!--<p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>-->
+        <!--<br/>-->
 
         <h4>Hoe zet ik mezelf voor de komende 6 uur op niet beschikbaar?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>Hoe zet ik mezelf beschikbaar voor iedere dinsdagavond van 17:00-2300?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Hoe stuur ik een bericht naar alle collega's in een groep (bijv. alle opstappers)?</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>How to send a message to all Opstappers?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>Hoe zie ik mijn huidige status en die van de groep(en)?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
 
         <h4>Hoe zet ik de geo-fencing optie aan of uit?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd.</p>
         <br/>
       </div>
       <!-- end iosTab -->
@@ -288,61 +190,35 @@
                 src="//www.youtube.com/embed/fepUaXchGAc"
                 frameborder="0"
                 allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
         <br/>
 
-        <h4>Hoe weet ik welke versie van de app ik gebruik?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
-        <br/>
+        <!--<h4>Hoe weet ik welke versie van de app ik gebruik?</h4>-->
+        <!--<iframe width="560"-->
+                <!--height="315"-->
+                <!--src="//www.youtube.com/embed/fepUaXchGAc"-->
+                <!--frameborder="0"-->
+                <!--allowfullscreen></iframe>-->
+        <!--<p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>-->
+        <!--<br/>-->
 
         <h4>Hoe zet ik mezelf voor de komende 6 uur op niet beschikbaar?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
         <br/>
 
         <h4>Hoe zet ik mezelf beschikbaar voor iedere dinsdagavond van 17:00-2300?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Hoe stuur ik een bericht naar alle collega's in een groep (bijv. alle opstappers)?</p>
+        <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
         <br/>
 
         <h4>How to send a message to all Opstappers?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
         <br/>
 
         <h4>Hoe zie ik mijn huidige status en die van de groep(en)?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
         <br/>
 
         <h4>Hoe zet ik de geo-fencing optie aan of uit?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <p>Vestibulum non molestie magna. Morbi porta blandit convallis.</p>
+        <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
         <br/>
       </div>
       <!-- end androidTab -->
