updated faq for ios

--- a/war/js/views/faq.html
+++ b/war/js/views/faq.html
@@ -135,12 +135,8 @@
         <hr>
 
         <h4>Hoe download ik de app?</h4>
-        <iframe width="560"
-                height="315"
-                src="//www.youtube.com/embed/fepUaXchGAc"
-                frameborder="0"
-                allowfullscreen></iframe>
-        <br/>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/7eKXip3eppE" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
         <!--<h4>Hoe weet ik welke versie van de app ik gebruik?</h4>-->
         <!--<iframe width="560"-->
@@ -152,24 +148,23 @@
         <!--<br/>-->
 
         <h4>Hoe zet ik mezelf voor de komende 6 uur op niet beschikbaar?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/Cr0WpvjtE6s" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
         <h4>Hoe zet ik mezelf beschikbaar voor iedere dinsdagavond van 17:00-2300?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/YBjf6TCDj6o" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
         <h4>How to send a message to all Opstappers?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/rK-TZGITUug" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
         <h4>Hoe zie ik mijn huidige status en die van de groep(en)?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/gLRrA2esQ6I" frameborder="0" allowfullscreen></iframe>
+        <br/><br/><br/>
 
         <h4>Hoe zet ik de geo-fencing optie aan of uit?</h4>
-        <p>Video wordt binnenkort gepubliceerd.</p>
-        <br/>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/cWvvPkkUYyo" frameborder="0" allowfullscreen></iframe>
       </div>
       <!-- end iosTab -->
 
