updated faq for ios, title correction

--- a/war/js/views/faq.html
+++ b/war/js/views/faq.html
@@ -155,7 +155,7 @@
         <iframe width="560" height="315" src="//www.youtube.com/embed/YBjf6TCDj6o" frameborder="0" allowfullscreen></iframe>
         <br/><br/><br/>
 
-        <h4>How to send a message to all Opstappers?</h4>
+        <h4>Hoe stuur ik een bericht naar alle collega's in een groep (bijv. alle opstappers)?</h4>
         <iframe width="560" height="315" src="//www.youtube.com/embed/rK-TZGITUug" frameborder="0" allowfullscreen></iframe>
         <br/><br/><br/>
 
@@ -204,7 +204,7 @@
         <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
         <br/>
 
-        <h4>How to send a message to all Opstappers?</h4>
+        <h4>Hoe stuur ik een bericht naar alle collega's in een groep (bijv. alle opstappers)?</h4>
         <p>Video wordt binnenkort gepubliceerd bij de volgende android app release.</p>
         <br/>
 
